[mouse-event]mouse event

--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -1,4 +1,4 @@
-@import './base/base';
+@import './base/base.scss';
 
 .main-wrapper {
 	background: $bg-white;
@@ -217,12 +217,13 @@
 					&.active a {
 						font-weight: 500;
 						.dropdown-wrapper {
-              @media screen and (max-width:1366px) {
-                display:none;
-              }
+              position: relative;
 							&.show-dropdown {
 								display: block;
-							}
+              }
+              @media screen and (max-width:1024px) {
+                display: none;
+              }
 							position: absolute;
 							width: 100%;
 							z-index: 1;
@@ -230,14 +231,17 @@
 							top: 69px;
 							background-color: ghostwhite;
 							border: 1px solid #eeeeee;
-							transition: all .8s ease;
+							transition: all .5s ease;
 							padding: 20px;
-							height: 450px;
+              height: 450px;
+
 							ul.dropdown-inner {
+                transition:margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 								background: #eceff1;
 								width: 100%;
 								height: 350px;
-								padding: 0;
+                padding: 0;
+                margin: 20px 0;
 								li {
 									display: inline-block;
 									padding: 10px 15px;
@@ -253,3 +257,7 @@
 		}
 	}
 }
+
+
+
+
