--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -201,23 +201,25 @@
 					}
 				}
 				padding: 0;
-				margin: 20px 0 5px;
+				margin: 30px 0 5px;
 				list-style: none;
 				display: flex;
 				flex-wrap: wrap;
 				flex-flow: row;
 				justify-content: space-evenly;
 				li.navigation-item {
-					//position: relative;
-					padding: 5px 0;
+          padding: 5px 0;
 					cursor: pointer;
 					a {
-						text-decoration: none;
+            text-decoration: none;
+            line-height: 35px;
+            padding: 7px 3px;
 					}
 					&.active a {
-						font-weight: 500;
+            font-weight: 500;
+
 						.dropdown-wrapper {
-              position: relative;
+              // position: relative;
 							&.show-dropdown {
 								display: block;
               }
@@ -228,7 +230,7 @@
 							width: 100%;
 							z-index: 1;
 							left: 0;
-							top: 69px;
+							top: 90px;
 							background-color: ghostwhite;
 							border: 1px solid #eeeeee;
 							transition: all .5s ease;
